--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
+    <string name="profile_desc">Rowan Sebastian Atkinson CBE is a computer technician an a part time article writer</string>
     <string name="profile_title">Mr Bean</string>
-    <string name="posts">posts</string>
+    <string name="posts">Articles</string>
     <string name="followers">followers</string>
     <string name="following">following</string>
     <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
