--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,19 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string name="profile_desc">Rowan Sebastian Atkinson CBE is a computer technician an a part time article writer</string>
+    <string name="profile_mail">rowanartkinson@gmail.com</string>
     <string name="profile_title">Mr Bean</string>
-    <string name="posts">Articles</string>
-    <string name="followers">followers</string>
-    <string name="following">following</string>
+    <string name="posts">Completed events</string>
+    <string name="read">Articles read</string>
+    <string name="written">Articles written</string>
+    <string name="credit_score">Credit score</string>
     <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
     <string name="lbl_set_profile_photo">Set profile image</string>
     <string name="lbl_take_camera_picture">Take a picture</string>
     <string name="lbl_choose_from_gallery">Choose from gallery</string>
     <string name="toast_image_intent_null">Image picker option is missing!</string>
+
+    <string name="article_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry  it over 2000 years old.</string>
     <!-- font families -->
     <string name="font_family_light">sans-serif-light</string>
     <string name="font_family_medium">sans-serif-medium</string>
