--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
 
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+
+    <!-- Change the following strings as required -->
+    <string name="back4app_app_id">dSEL6moJxtSHVoTLMdThkOgDWltzy4c2ZYGctUda</string>
+    <string name="back4app_client_key">Fdeg8zRgtNmc9la8CnF4XjlJkDzMUc6U4Tyzt9aS</string>
+
+
 </resources>
